# rust-exercises

./: Cargo.toml
fundamentals/: .gitignore  Cargo.toml
fundamentals/src/: borrow_lifetimes.rs  boxing_unboxing.rs  closures.rs  enums.rs  iterators.rs  main.rs  match_construct.rs  ownership.rs  strings.rs
i18n/: Cargo.toml
i18n/resources/bg/: simple.ftl
i18n/resources/pt-PT/: simple.ftl
i18n/src/: i18n_test.rs  main.rs
modules/Combination/0.0.0/pms/: FA.PMS
modules/GeneratedModels/0.0.0/pms/: EquityIndexedAnnuityPlan1.pms  EquityIndexedAnnuityPlan1_ProductInformationAccess.pms  MultiPlanModel.pms  MultiPlanModel_ProductInformationAccess.pms  PriceDoncates.pms  WholeLife2.pms  WholeLife2_ProductInformationAccess.pms  WholeLifePlan1.pms  WholeLifePlan1_ProductInformationAccess.pms
modules/GeneratedModels/0.0.0/vpm-xe/: EquityIndexedAnnuityPlan1.vpm  MultiPlanModel.vpm  PriceDoncates.vpm  WholeLife2.vpm  WholeLifePlan1.vpm
modules/Global/0.0.0/pms/: ACCESS.pms  AnnuityDisbursementSolves.pms  CashSurrenderValue.pms  Charges.pms  Constants.pms  CoverageAndCovOptionCharges.pms  DefaultFunctions.pms  DemoName.pms  Derarate.pms  Deratabl.pms  DividendEarnedAmount.pms  ErrorFunctions.pms  GeneralFunctions.pms  Loans.pms  PAGLOC.pms  (+100 more)
src/: array_vector.rs  functions.rs  generic_functions.rs  io.rs  main.rs  strings.rs  tuples_structs.rs  vector_update.rs
src/i18n/: Cargo.toml  i18n_test.rs
src/i18n/src/: i18n_test.rs  main.rs
vpm-xe/: DemoName.vpm  PAGCalcRule.vpm  PAGGLocation.vpm  PAGLOC.vpm  PAGTraditionalProducts.vpm  RGADPA.vpm  RGCIPA.vpm  RGTERMPA.vpm
(+344 files in other folders)
