[package]
name = "hello-world"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
substring = "1"
walkdir = "2"
fluent = "0.16"
unic-langid = "0.9"
fluent-langneg = "0.13"

[dev-dependencies]
unic-langid = { version = "0.9", features = ["macros"] }
