[package]
name = "i18n"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluent = "0.16"
fluent-langneg = "0.13"
unic-langid = { version = "0.9", features = ["macros"] }
accept-language = "1.2"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
